--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Battle Quiz</string>
     <string name="action_settings">Settings</string>
+    <string name="take_quiz">Take Quiz</string>
+    <string name="create_quiz">Create Quiz</string>
+    <string name="enter_quiz_name">Enter Quiz Name</string>
+    <string name="quiz_name">Quiz Name:</string>
+    <string name="add_question">Add Question</string>
 </resources>
