--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="save_question">Save Question</string>
     <string name="enter_choice_3">Enter choice 3</string>
     <string name="enter_choice_4">Enter choice 4</string>
+    <string name="correct_answer">Correct Answer</string>
 </resources>
