--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Battle Quiz</string>
     <string name="action_settings">Settings</string>
     <string name="take_quiz">Take Quiz</string>
-    <string name="create_quiz">Create/Edit Quiz</string>
+    <string name="create_quiz">Create Quiz</string>
     <string name="enter_quiz_name">Enter Quiz Name</string>
     <string name="quiz_name">Quiz Name:</string>
     <string name="add_question">Add Question</string>
@@ -17,4 +17,5 @@
     <string name="title_activity_take_quiz">TakeQuizActivity</string>
     <string name="title_activity_quiz_complete">QuizCompleteActivity</string>
     <string name="start_game">Start Game</string>
+    <string name="edit_quiz">Edit Quiz</string>
 </resources>
