--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="enter_name">Enter name</string>
     <string name="score">Score:</string>
     <string name="leaderboard">Leaderboard</string>
+    <string name="title_activity_login">"Login "</string>
+    <string name="title_activity_sign_up">Sign Up</string>
 </resources>
