--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,15 @@
     <string name="leaderboard">Leaderboard</string>
     <string name="title_activity_login">"Login "</string>
     <string name="title_activity_sign_up">Sign Up</string>
+    <string name="login">Login</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="your_quizzes">Your Quizzes:</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="password_2">password</string>
+    <string name="enter_email">Enter Email</string>
+    <string name="verify_password">Verify Password</string>
+    <string name="share_score">Share score</string>
+    <string name="questions">Questions:</string>
 </resources>
